# InfinityArmyListBuilder

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
assets/styling/: army_list.css
src/: main.rs
src/api/: mod.rs  requests.rs  types.rs
src/views/: army_builder.rs  army_list.rs  factions_list.rs  mod.rs  navbar.rs  units_list.rs
