[package]
name = "infinity-army-list-builder"
version = "0.1.0"
authors = ["Julien Lopez <julien.lopez51@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.6.1", features = ["web", "router"] }

# Debug
dioxus-logger = "0.6"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["serde_derive"] }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
